--- a/HTB Writeups/1121213_HW_莫&東.md
+++ b/HTB Writeups/1121213_HW_莫&東.md
@@ -25,7 +25,7 @@ Nmap done: 1 IP address (1 host up) scanned in 31.66 seconds
 
 
 
- 使用目錄爆破工具dirb，確認是否有其他進入點，發現目錄`/error`
+ 使用目錄爆破工具dirsearch，確認是否有其他進入點
 ```
 ┌──(kali㉿kali)-[~/dirsearch]
 └─$ python dirsearch.py -u http://cozyhosting.htb/     
